2009-09-15  Jiri Olsa <olsajiri@gmail.com>
	* added initial support for timestamp display

-------------------------------------------------------------------------------
latrace 0.5.7

2009-09-08  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.7 latrace.spec changes

2009-09-04  Jiri Olsa <olsajiri@gmail.com>
	* 0.5.7 release changes

2009-08-21  Jiri Olsa <olsajiri@gmail.com>
	* added '-B' option to always display the { } around the symbol body
	* minor code sttyle changes

2009-08-20  Jiri Olsa <olsajiri@gmail.com>
	* added C++ demangling support - "-d" option

-------------------------------------------------------------------------------
latrace 0.5.6

2009-07-06  Jiri Olsa <olsajiri@gmail.com>
	* changes for the rpm review
	* 0.5.6 release changes

2009-07-04  Jiri Olsa <olsajiri@gmail.com>
	* minor changes for the rpm review

2009-07-02  Jiri Olsa <olsajiri@gmail.com>
	* adding --unsafe for asciidoc to workaround
	  build on the Fedora Rawhide

2009-07-01  Jiri Olsa <olsajiri@gmail.com>
	* adding %postun %post to latrace.spec & several minor 
	  changes based on the Fedora rpm review

2009-06-13  Jiri Olsa <olsajiri@gmail.com>
	* added latrace.spec for rpm pkg. building
	* minor Makefile mrproper change

2009-06-06  Jiri Olsa <olsajiri@gmail.com>
	* added support pointers in typedef
	* fixed minor bug for pointer output
	* added more checks to configure.ac
	* make mrproper real propper

2009-05-13  Jiri Olsa <olsajiri@gmail.com>
	* added DESTDIR makefile support

-------------------------------------------------------------------------------
latrace 0.5.5

2009-04-25  Jiri Olsa <olsajiri@gmail.com>
	* fixed arch dependent enum handling
	* fixed config file line number tracking

2009-04-25  Jiri Olsa <olsajiri@gmail.com>
	* release notes for 0.5.5

2009-04-22  Jiri Olsa <olsajiri@gmail.com>
	* main Makefile changes - adding the package target

2009-04-17  Jiri Olsa <olsajiri@gmail.com>
	* install function - skip the install if the file does not exist
