@@ -133,7 +133,7 @@ static int process_fifo(struct lt_config_app *cfg, struct lt_thread *t)
 	if (FIFO_MSG_TYPE_ENTRY == msym->h.type) {
 
 		cfg->sh.indent_depth++;
-		lt_out_entry(&cfg->sh, NULL,
+		lt_out_entry(&cfg->sh, &msym->h.tv,
 				msym->data + msym->sym,
 				msym->data + msym->lib,
 				msym->data + msym->arg,
@@ -141,7 +141,7 @@ static int process_fifo(struct lt_config_app *cfg, struct lt_thread *t)
 
 	} else if (FIFO_MSG_TYPE_EXIT == msym->h.type) {
 
-		lt_out_exit(&cfg->sh, NULL,
+		lt_out_exit(&cfg->sh, &msym->h.tv,
 				msym->data + msym->sym,
 				msym->data + msym->lib,
 				msym->data + msym->arg,
